增加修改限额接口
